# fastapi-ml-skeleton

./: .env.example  .flake8  .gitignore  LICENSE  MANIFEST  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
docs/: sample_payload.json
fastapi_skeleton/: main.py
fastapi_skeleton/api/routes/: heartbeat.py  prediction.py  router.py
fastapi_skeleton/core/: config.py  event_handlers.py  messages.py  security.py
fastapi_skeleton/models/: heartbeat.py  payload.py  prediction.py
fastapi_skeleton/services/: models.py
sample_model/: lin_reg_california_housing_model.joblib  model_description.md
scripts/: linting.sh  test.sh
tests/: conftest.py
tests/test_api/: test_api_auth.py  test_heartbeat.py  test_prediction.py
tests/test_service/: test_models.py
